syntax = "proto3";

package streamer;

service Streamer {
  rpc BiStream(stream StreamRequest) returns (stream StreamResponse);
  rpc ClientStream(stream StreamRequest) returns (StreamResponse);
  rpc ServerStream(StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
  string query = 1;
}

message StreamResponse {
  string results = 1;
}